fix(slider): fixes thumb positioning so that it works when not visible
This is accomplished by using percent-based positioning rather than pixel-based.

Closes #1210.

--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -85,6 +85,7 @@ md-slider {
     position: absolute;
     left: 0;
     top: 0;
+    right: 0;
     transform: translate3d(0,0,0);
     transition: transform 0.1s linear;
   }
